src/main/java/com/example/timelist/error/StudentAlreadyHaveGroupException.java
package com.example.timelist.error;

public class StudentAlreadyHaveGroupException extends RuntimeException{

}
